--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -7,12 +7,12 @@
         </section>
 
         <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end" role="toolbar">
-            <div class="mdc-text-field mdc-text-field--outlined" id="inputText">
+            <div class="mdc-text-field mdc-text-field--outlined" id="inputText" style="background-color:white">
                 <input class="mdc-text-field__input booksearch" id="text-field-hero-input">
                 <div class="mdc-notched-outline">
                     <div class="mdc-notched-outline__leading"></div>
                     <div class="mdc-notched-outline__notch">
-                        <label for="text-field-hero-input" class="mdc-floating-label">Search Book</label>
+                        {{!-- <label for="text-field-hero-input" class="mdc-floating-label">Search Book</label> --}}
                     </div>
                     <div class="mdc-notched-outline__trailing"></div>
                 </div>
@@ -36,9 +36,11 @@
         </section>
     </div>
 </header>
-<div class="mdc-layout-grid">
 
-    <h3>Filler</h3>
-    <h2 style="text-align: center">Search Results</h2>
+<div id="search-section">
+    <div class="mdc-layout-grid">
 
+        <h3>Filler</h3>
+        <h2 style="text-align: center">Search Results</h2>
+    </div>
 </div>
