--- a/views/wishlist.handlebars
+++ b/views/wishlist.handlebars
@@ -24,54 +24,35 @@
     </div>
 </header>
 
-
-<div class="mdc-data-table" id="table1" style="width:50%; margin-left:25%; margin-right:25%">
-    <table class="mdc-data-table__table" aria-label="wishlist books">
-        <thead>
-            <tr class="mdc-data-table__header-row">
-                <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Title</th>
-                <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Author</th>
-                <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Update Read Status</th>
-            </tr>
-        </thead>
-        <tbody class="mdc-data-table__content">
-            <h3>Filler</h3>
-            <h2 class="tables-title" style="text-align:center">Wishlist</h2>
-            {{#each Book }}
-            {{#unless dataValues.have_read}}
-            <tr class="mdc-data-table__row">
-                <td class="mdc-data-table__cell">{{dataValues.title}}</td>
-                <td class="mdc-data-table__cell">{{dataValues.author}}</td>
-                <td class="mdc-data-table__cell"><button type="button" class="update-read-btn"
-                        data-id="{{dataValues.id}}" data-readstatus="{{read}}">Read it!</button></td>
-            </tr>
-            {{/unless}}
-            {{/each}}
-        </tbody>
-    </table>
-</div>
-
-{{!-- <div class="mdc-data-table table2">
-        <table class="mdc-data-table__table" aria-label="completed books">
+<div id="wishlist-section">
+    <div class="mdc-data-table" id="table1" style="width:50%; margin-left:25%; margin-right:25%">
+        <table class="mdc-data-table__table" aria-label="wishlist books">
             <thead>
                 <tr class="mdc-data-table__header-row">
                     <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Title</th>
                     <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Author</th>
-                    <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Update</th>
+                    <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Update Read Status</th>
                 </tr>
             </thead>
             <tbody class="mdc-data-table__content">
-                <h2>Completed Books</h2>
-                {{#each complete }}
-                {{!-- {{#if have_read }} --}}
-{{!-- <tr class="mdc-data-table__row">
-                    <td class="mdc-data-table__cell">{{this.title}}</td>
-                    <td class="mdc-data-table__cell">{{this.author}}</td>
-                    <td class="mdc-data-table__cell"><button class="update-btn">Haven't Read!</button></td>
+                <h3>Filler</h3>
+                <h2 class="tables-title" style="text-align:center">Wishlist</h2>
+                {{#each Book }}
+                {{#unless dataValues.have_read}}
+                <tr class="mdc-data-table__row">
+                    <td class="mdc-data-table__cell">{{dataValues.title}}</td>
+                    <td class="mdc-data-table__cell">{{dataValues.author}}</td>
+                    <td class="mdc-data-table__cell">
+                        <button type="button" class="update-read-btn mdc-fab mdc-fab--extended"
+                            data-id="{{dataValues.id}}" data-readstatus="{{read}}">
+                            <div class="mdc-fab__ripple"></div>
+                            <span class="material-icons mdc-fab__icon">bookmark</span>
+                            Read it!
+                        </button></td>
                 </tr>
-                {{!-- {{/if}} --}}
-{{!-- {{/each}}
+                {{/unless}}
+                {{/each}}
             </tbody>
         </table>
-    </div> --}}
-{{!-- </div> --}}
+    </div>
+</div>
