added button hover titles and adjusted book image sizing

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -3,21 +3,21 @@
         <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
             {{!-- <button class="material-icons mdc-top-app-bar__navigation-icon mdc-icon-button"
                     aria-label="Open navigation menu">menu</button> --}}
-            <span class="mdc-top-app-bar__title title-click">Bookshelf</span>
+            <span class="mdc-top-app-bar__title title-click" title="Home">Bookshelf</span>
         </section>
 
         <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end" role="toolbar">
             <button class="theme-nav material-icons mdc-top-app-bar__action-item mdc-icon-button"
-                aria-label="Theme">brightness_2</button>
+                aria-label="Theme" title="Dark Mode">brightness_2</button>
 
             <button class="wishlist-nav material-icons mdc-top-app-bar__action-item mdc-icon-button"
-                aria-label="Wishlist">star</button>
+                aria-label="Wishlist" title="Book Wishlist">star</button>
 
             <button class="profile-nav material-icons mdc-top-app-bar__action-item mdc-icon-button"
-                aria-label="Account Circle">account_circle</button>
+                aria-label="Account Circle" title="Completed Books">account_circle</button>
 
             <button class="signout-nav material-icons mdc-top-app-bar__action-item mdc-icon-button"
-                aria-label="Signout">home</button>
+                aria-label="Signout" title="Logout">home</button>
 
         </section>
     </div>
