--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,15 +4,15 @@
         <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
             {{!-- <button class="material-icons mdc-top-app-bar__navigation-icon mdc-icon-button"
                     aria-label="Open navigation menu">menu</button> --}}
-            <span class="mdc-top-app-bar__title">Bookshelf</span>
+            <span class="mdc-top-app-bar__title" title="Home">Bookshelf</span>
         </section>
 
         <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end" role="toolbar">
             <button class="theme-nav material-icons mdc-top-app-bar__action-item mdc-icon-button"
-                aria-label="Theme">brightness_2</button>
+                aria-label="Theme" title="Dark Mode">brightness_2</button>
 
             <button class="signout-nav material-icons mdc-top-app-bar__action-item mdc-icon-button"
-                aria-label="Signout">home</button>
+                aria-label="Signout" title="Logout">home</button>
         </section>
     </div>
 </header>
