--- a/views/wishlist.handlebars
+++ b/views/wishlist.handlebars
@@ -4,74 +4,55 @@
         <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
             {{!-- <button class="material-icons mdc-top-app-bar__navigation-icon mdc-icon-button"
                     aria-label="Open navigation menu">menu</button> --}}
-            <span class="mdc-top-app-bar__title title-click" title="Home">Bookshelf</span>
+            <span class="mdc-top-app-bar__title title-click">Bookshelf</span>
         </section>
 
         <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end" role="toolbar">
             <button class="theme-nav material-icons mdc-top-app-bar__action-item mdc-icon-button"
-                aria-label="Theme" title="Dark Mode">brightness_2</button>
+                aria-label="Theme">brightness_2</button>
 
             <button class="wishlist-nav material-icons mdc-top-app-bar__action-item mdc-icon-button"
-                aria-label="Wishlist" title="Book Wishlist">star</button>
+                aria-label="Wishlist">star</button>
 
             <button class="profile-nav material-icons mdc-top-app-bar__action-item mdc-icon-button"
-                aria-label="Account Circle" title="Completed Books">account_circle</button>
+                aria-label="Account Circle">account_circle</button>
 
             <button class="signout-nav material-icons mdc-top-app-bar__action-item mdc-icon-button"
-                aria-label="Signout" title="Logout">home</button>
+                aria-label="Signout">home</button>
 
         </section>
     </div>
 </header>
 
-
-<div class="mdc-data-table" id="table1" style="width:75%; margin-left:11%; margin-right:10%">
-    <table class="mdc-data-table__table" aria-label="wishlist books" style="font-family:'Courier New', Courier, monospace;">
-        <thead>
-            <tr class="mdc-data-table__header-row">
-                <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Title</th>
-                <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Author</th>
-                <th class="mdc-data-table__header-cell" role="columnheader" scope="col" style="width: fit-content;">Update Read Status</th>
-            </tr>
-        </thead>
-        <tbody class="mdc-data-table__content">
-            <h3>Filler</h3>
-            <h2 class="tables-title" style="text-align:center; color: indigo;">Wishlist</h2>
-            {{#each Book }}
-            {{#unless dataValues.have_read}}
-            <tr class="mdc-data-table__row">
-                <td class="mdc-data-table__cell">{{dataValues.title}}</td>
-                <td class="mdc-data-table__cell" style="width: 10px;">{{dataValues.author}}</td>
-                <td class="mdc-data-table__cell"><button type="button" class="update-read-btn"
-                        data-id="{{dataValues.id}}" data-readstatus="{{read}}">I Read It!</button></td>
-            </tr>
-            {{/unless}}
-            {{/each}}
-        </tbody>
-    </table>
-</div>
-
-{{!-- <div class="mdc-data-table table2">
-        <table class="mdc-data-table__table" aria-label="completed books">
+<div id="wishlist-section">
+    <div class="mdc-data-table" id="table1" style="width:75%; margin-left:11%; margin-right:10%">
+        <table class="mdc-data-table__table" aria-label="wishlist books">
             <thead>
                 <tr class="mdc-data-table__header-row">
                     <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Title</th>
                     <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Author</th>
-                    <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Update</th>
+                    <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Update Read Status</th>
                 </tr>
             </thead>
             <tbody class="mdc-data-table__content">
-                <h2>Completed Books</h2>
-                {{#each complete }}
-                {{!-- {{#if have_read }} --}}
-{{!-- <tr class="mdc-data-table__row">
-                    <td class="mdc-data-table__cell">{{this.title}}</td>
-                    <td class="mdc-data-table__cell">{{this.author}}</td>
-                    <td class="mdc-data-table__cell"><button class="update-btn">Haven't Read!</button></td>
+                <h3>Filler</h3>
+                <h2 class="tables-title" style="text-align:center">Wishlist</h2>
+                {{#each Book }}
+                {{#unless dataValues.have_read}}
+                <tr class="mdc-data-table__row">
+                    <td class="mdc-data-table__cell">{{dataValues.title}}</td>
+                    <td class="mdc-data-table__cell">{{dataValues.author}}</td>
+                    <td class="mdc-data-table__cell">
+                        <button type="button" class="update-read-btn mdc-fab mdc-fab--extended"
+                            data-id="{{dataValues.id}}" data-readstatus="{{read}}">
+                            <div class="mdc-fab__ripple"></div>
+                            <span class="material-icons mdc-fab__icon">bookmark</span>
+                            I Read it!
+                        </button></td>
                 </tr>
-                {{!-- {{/if}} --}}
-{{!-- {{/each}}
+                {{/unless}}
+                {{/each}}
             </tbody>
         </table>
-    </div> --}}
-{{!-- </div> --}}
+    </div>
+</div>
