--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project 2</title>
+    <title>Bookshelf</title>
 
 
     <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
     <link rel="stylesheet" type="text/css" href="/assets/css/book_style.css">
+    <link rel="icon" 
+      type="image/png" 
+      href="https://www.pinclipart.com/picdir/middle/273-2734486_book-icon-creative-commons-png-download-clipart.png">
 
 </head>
 
