Added icon to the left of navbar

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,9 +13,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
     <link rel="stylesheet" type="text/css" href="/assets/css/book_style.css">
-    <link rel="icon" 
-      type="image/png" 
-      href="https://www.pinclipart.com/picdir/middle/273-2734486_book-icon-creative-commons-png-download-clipart.png">
+    <link rel="icon" type="image/png"
+        href="https://www.pinclipart.com/picdir/middle/273-2734486_book-icon-creative-commons-png-download-clipart.png">
 
 </head>
 
