--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -3,6 +3,10 @@
         <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
             {{!-- <button class="material-icons mdc-top-app-bar__navigation-icon mdc-icon-button"
                     aria-label="Open navigation menu">menu</button> --}}
+            <span><img
+                    src="https://www.pinclipart.com/picdir/middle/273-2734486_book-icon-creative-commons-png-download-clipart.png"
+                    style="width:50px; height:auto"></span>
+
             <span class="mdc-top-app-bar__title title-click" title="Home">Bookshelf</span>
         </section>
 
@@ -18,11 +22,11 @@
                 </div>
             </div>
 
-            <button class="searchbutton material-icons mdc-top-app-bar__action-item mdc-icon-button"
-                aria-label="Search" title="Click to Search">search</button>
+            <button class="searchbutton material-icons mdc-top-app-bar__action-item mdc-icon-button" aria-label="Search"
+                title="Click to Search">search</button>
 
-            <button class="theme-nav material-icons mdc-top-app-bar__action-item mdc-icon-button"
-                aria-label="Theme" title="Dark Mode">brightness_2</button>
+            <button class="theme-nav material-icons mdc-top-app-bar__action-item mdc-icon-button" aria-label="Theme"
+                title="Dark Mode">brightness_2</button>
 
             <button class="wishlist-nav material-icons mdc-top-app-bar__action-item mdc-icon-button"
                 aria-label="Wishlist" title="Book Wishlist">star</button>
@@ -30,8 +34,8 @@
             <button class="profile-nav material-icons mdc-top-app-bar__action-item mdc-icon-button"
                 aria-label="Account Circle" title="Completed Books">account_circle</button>
 
-            <button class="signout-nav material-icons mdc-top-app-bar__action-item mdc-icon-button"
-                aria-label="Signout" title="Logout">home</button>
+            <button class="signout-nav material-icons mdc-top-app-bar__action-item mdc-icon-button" aria-label="Signout"
+                title="Logout">home</button>
 
         </section>
     </div>
