--- a/views/wishlist.handlebars
+++ b/views/wishlist.handlebars
@@ -4,6 +4,9 @@
         <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
             {{!-- <button class="material-icons mdc-top-app-bar__navigation-icon mdc-icon-button"
                     aria-label="Open navigation menu">menu</button> --}}
+            <span><img
+                    src="https://www.pinclipart.com/picdir/middle/273-2734486_book-icon-creative-commons-png-download-clipart.png"
+                    style="width:50px; height:auto"></span>
             <span class="mdc-top-app-bar__title title-click">Bookshelf</span>
         </section>
 
