--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -3,12 +3,16 @@
         <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
             {{!-- <button class="material-icons mdc-top-app-bar__navigation-icon mdc-icon-button"
                     aria-label="Open navigation menu">menu</button> --}}
+            <span><img
+                    src="https://www.pinclipart.com/picdir/middle/273-2734486_book-icon-creative-commons-png-download-clipart.png"
+                    style="width:50px; height:auto"></span>
+
             <span class="mdc-top-app-bar__title title-click" title="Home">Bookshelf</span>
         </section>
 
         <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end" role="toolbar">
-            <button class="theme-nav material-icons mdc-top-app-bar__action-item mdc-icon-button"
-                aria-label="Theme" title="Dark Mode">brightness_2</button>
+            <button class="theme-nav material-icons mdc-top-app-bar__action-item mdc-icon-button" aria-label="Theme"
+                title="Dark Mode">brightness_2</button>
 
             <button class="wishlist-nav material-icons mdc-top-app-bar__action-item mdc-icon-button"
                 aria-label="Wishlist" title="Book Wishlist">star</button>
@@ -16,8 +20,8 @@
             <button class="profile-nav material-icons mdc-top-app-bar__action-item mdc-icon-button"
                 aria-label="Account Circle" title="Completed Books">account_circle</button>
 
-            <button class="signout-nav material-icons mdc-top-app-bar__action-item mdc-icon-button"
-                aria-label="Signout" title="Logout">home</button>
+            <button class="signout-nav material-icons mdc-top-app-bar__action-item mdc-icon-button" aria-label="Signout"
+                title="Logout">home</button>
 
         </section>
     </div>
@@ -42,11 +46,12 @@
                     <td class="mdc-data-table__cell">{{dataValues.title}}</td>
                     <td class="mdc-data-table__cell">{{dataValues.author}}</td>
                     <td class="mdc-data-table__cell"><button type="button"
-                        class="update-unread-btn mdc-fab mdc-fab--extended" data-id="{{dataValues.id}}"
-                        data-readstatus="{{unread}}">
-                        <div class="mdc-fab__ripple"></div>
-                        <span class="material-icons mdc-fab__icon">star</span>
-                        Haven't Read Yet!</button></td>
+                            class="update-unread-btn mdc-fab mdc-fab--extended" data-id="{{dataValues.id}}"
+                            data-readstatus="{{unread}}">
+                            <div class="mdc-fab__ripple"></div>
+                            <span class="material-icons mdc-fab__icon">star</span>
+                            Haven't Read Yet!
+                        </button></td>
                 </tr>
                 {{/if}}
                 {{/each }}
